영어선생님 저장 히스토리 수량 수정 및 퀴즈뷰 처리.